--- a/README
+++ b/README
@@ -1,6 +1,11 @@
 ---------------------------------------------------------------------
 About
 ---------------------------------------------------------------------
+Missing Angela? Want to talk to her? Then this script is for you.
+
+Author:  
+Andreja Kogovsek
+
 Disclaimer: 
 This script is definitely not part of a larger, perfectly innocent, 
 project (and by that I do not secretly mean evil conspiracy)
